# limitless-sdk

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
examples/: 00_setup_approvals.py  01_authentication.py  02_create_buy_gtc_order.py  03_cancel_gtc_order.py  04_create_sell_gtc_order.py  05_create_buy_fok_order.py  06_create_sell_fok_order.py  06_retry_handling.py  07_auto_retry_second_sample.py  08_websocket_events.py  09_market_pages_navigation.py  10_create_buy_fak_order.py  README.md  websocket_positions.py
examples/api_key_v3/: README.md  api_tokens.py  common.py  delegated_fok_order.py  delegated_order.py  e2e_flow.py  partner_account.py  server_wallet_redeem_withdraw.py  websocket_hmac.py
limitless_sdk/: __init__.py  _sdk_tracking.py  client.py  models.py  sdk_client.py
limitless_sdk/api/: __init__.py  errors.py  hmac.py  http_client.py
limitless_sdk/api_tokens/: __init__.py  service.py
limitless_sdk/auth/: authenticated_client.py  authenticator.py
limitless_sdk/delegated_orders/: __init__.py  service.py
limitless_sdk/market_pages/: __init__.py  fetcher.py
limitless_sdk/markets/: fetcher.py
limitless_sdk/orders/: __init__.py  builder.py  client.py  (+1 more)
tests/: __init__.py  test_api_token_service.py  test_client.py  test_delegated_order_service.py  test_http_client_auth.py  test_http_client_raw.py  test_market_page_fetcher.py  test_order_builder.py  test_order_response_numeric_parsing.py  test_partner_account_service.py  test_sdk_client_v3.py  test_server_wallet_service.py  test_websocket_hmac.py
(+21 files in other folders)
